--- a/onlineplantnursery/package.json
+++ b/onlineplantnursery/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
